--- a/PequenosEmpresarios/package.json
+++ b/PequenosEmpresarios/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
@@ -25,7 +23,6 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "eslint-plugin-vue": "^9.18.0",
-    "gh-pages": "^6.1.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.9"
