--- a/PequenosEmpresarios/package.json
+++ b/PequenosEmpresarios/package.json
@@ -2,10 +2,12 @@
   "name": "presupuestoserviciosfidepor",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
@@ -14,7 +16,7 @@
     "firebase": "^10.5.0",
     "pinia": "^2.1.6",
     "primevue": "^3.52.0",
-    "sweetalert2": "^11.7.32",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
@@ -23,6 +25,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "eslint-plugin-vue": "^9.18.0",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.9"
