--- a/PequenosEmpresarios/package.json
+++ b/PequenosEmpresarios/package.json
@@ -14,9 +14,11 @@
     "daisyui": "^3.9.4",
     "dotenv": "^16.3.1",
     "firebase": "^10.5.0",
+    "loglevel": "^1.9.1",
+    "moment-timezone": "^0.5.45",
     "pinia": "^2.1.6",
     "primevue": "^3.52.0",
-    "sweetalert2": "^11.6.13",
+    "sweetalert2": "^11.12.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
