--- a/PequenosEmpresarios/package.json
+++ b/PequenosEmpresarios/package.json
@@ -21,6 +21,7 @@
     "primevue": "^3.52.0",
     "sweetalert2": "^11.12.3",
     "vue": "^3.3.4",
+    "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
