--- a/PequenosEmpresarios/package.json
+++ b/PequenosEmpresarios/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@firebase/app-check": "^0.8.6",
     "@headlessui/vue": "^1.7.16",
+    "crypto-js": "^4.2.0",
     "daisyui": "^3.9.4",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.4",
     "loglevel": "^1.9.1",
     "moment-timezone": "^0.5.45",
